# monzo-challenge

./: CHALLENGE.md  README.md  TODO.md  pyproject.toml  results.txt  run_crawler.py
crawler/: crawler.py  link_extractor.py  page_fetcher.py  url_manager.py
tests/: test_crawler.py  test_link_extractor.py  test_page_fetcher.py  test_url_manager.py
