[tool.poetry]
name = "monzo-challenge"
version = "1"
description = "Web crawler tool developed during monzo take home challenge"
authors = ["Charles Apochi <charlesapochi@gmail.com>"]
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
